Upgrade visuals. Fix alignment bug.

--- a/api/app/cad-ctrl.css
+++ b/api/app/cad-ctrl.css
@@ -1,26 +1,38 @@
-main {
-    max-width: 75%;
-    margin: 0 auto;
-    padding: 20px;
+html, body, main {
+    height: 100vh; 
+    margin: 0;
+    padding: 0;
 }
 
-.drop-zone {
-    height: 100px;
+main {
+    width: 100%;
+    max-width: 100%;
 }
+
+#drop-zone {
+    max-width: 100%;
+    height: 100%;
+    pointer-events: none;
+    opacity: 0;
+    z-index: 3;
+    border: 0;
+}
+
+#drop-zone.hidden {
+    pointer-events: none;
+    opacity: 0;
+    z-index: 0;
+}
+
 
 #cad-frame {
-    margin-bottom: 0;
-    height: 500px;
+    height: 100%;
+    width: 100%;
     cursor: default;
     position: relative;
     border: none;
     border-radius: 0;
     z-index: 0;
-}
-
-#cad-frame > canvas {
-    border: 1px dashed #ccc;
-    border-radius: 4px;
 }
 
 #gizmo-frame {
@@ -31,7 +43,7 @@ main {
     left: 10px;
     bottom: 10px;
     border: none;
-    z-index: 1;
+    z-index: 3;
     border-radius: 50%; /* Ensure it's perfectly round */
     background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.6), rgba(0, 0, 0, 0.3));
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5), 0 4px 6px rgba(0, 0, 0, 0.3);
@@ -44,11 +56,30 @@ main {
 }
 
 .alignment-controls {
-    margin-top: 10px;
-    padding: 4px;
-    border: 1px solid #ccc;
+    width: calc(100% - 128px);
+    padding: 8px 8px 8px 120px;
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-top: 1px solid #ccc;
     border-radius: 4px;
-    background: #f9f9f9;
+    background: #f9f9f988;
+    z-index: 2;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.controls-panel {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    align-self: flex-start;
+}
+
+.alignment-btn-panel {
+    display: flex;
+    flex-direction: column;
 }
 
 #translation-control {
@@ -67,11 +98,10 @@ main {
     pointer-events: none;
 }
 
-#axis-selector {
+.axis-selector {
     margin-top: 10px;
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
+    gap: 4px;
 }
 
 .btn-cad-action {
@@ -88,18 +118,28 @@ main {
 }
 
 /* CAD Controls Styles */
-.cad-ctrl {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background: #f9f9f9;
+.cad-view-panel {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    background: #f9f9f988;
     margin: 0 0 10px 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.cad-ctrl-toolbar {
+    padding: 8px;
 }
 
 .cad-ctrl-groups {
     display: flex;
     gap: 24px;
     justify-content: space-between;
+    padding: 8px;
 }
 
 .cad-ctrl-group {
@@ -147,11 +187,11 @@ main {
 
 .atom-info {
     font-family: monospace;
-    padding: 4px;
+    padding: 8px;
     z-index: 2;
     position: absolute;
-    top: 0;
-    left:0;
+    top: 100%;
+    left: 0;
     text-align: left;
 }
 
@@ -165,17 +205,15 @@ label.cad-ctrl-grid span {
     font-weight: normal;
 }
 
-#miller-plane-selector {
-    
-}
-
 .plane-selector label>span {
     font-size: smaller;
     font-weight: normal;
 }
 
-#miller-plane-selector .plane-selector {
+.plane-selector {
     margin-top: 10px;
+    display: flex;
+    gap: 4px;
 }
 
 #workflow-controls {
